# field-exec

./: .gitignore  .metadata  Cargo.toml  LICENSE.md  README.md  pubspec.yaml
.githooks/: pre-commit
android/app/: build.gradle.kts
docs/: Advanced Usage.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner/Robot Remote.icon/: icon.json
lib/: main.dart
lib/app/: codex_remote_app.dart  field_exec_app.dart
lib/app/bindings/: initial_binding.dart
lib/app/routes/: app_pages.dart  app_routes.dart
lib/background/: codex_remote_workmanager.dart
lib/codex/: codex_command.dart  codex_events.dart  codex_output_schema.dart  jsonl.dart
lib/features/connection/: connection_controller.dart  connection_page.dart
lib/features/projects/: project_args.dart  project_sessions_controller.dart  project_sessions_page.dart  projects_controller.dart  projects_page.dart  run_command_sheet.dart  target_args.dart
lib/models/: connection_profile.dart  conversation.dart  project.dart  project_tab.dart
lib/rinf/: rust_hosts.dart  rust_ssh_service.dart
lib/services/: active_session_service.dart  app_lifecycle_service.dart  codex_session_store.dart  connection_history_service.dart  conversation_store.dart  desktop_file_store.dart  field_exec_session_store.dart  field_execd_client.dart  local_shell_service.dart  local_spawn_lock.dart  local_ssh_keys_service.dart  project_store.dart  project_tabs_store.dart  remote_jobs_store.dart  secure_storage_service.dart  session_scrollback_service.dart  ssh_key_service.dart  ssh_service.dart  theme_mode_service.dart
macos/Runner/: MainFlutterWindow.swift
macos/Runner.xcodeproj/: project.pbxproj
native/codex_remote_api/: Cargo.toml
native/hub/: Cargo.toml
rust/codex_remote_adapters/: Cargo.toml
rust/codex_remote_core/: Cargo.toml
rust/codex_remote_rinf/: Cargo.toml
rust/codex_remote_rinf/src/: storage.rs
rust/codex_remote_runtime/: Cargo.toml
rust/codex_remote_runtime/src/: lib.rs  ssh.rs
rust/field_exec_runtime/: Cargo.toml
scripts/: fix-macos-cli-codesign.sh  install-git-hooks.sh
test/: widget_test.dart
(+19 files in other folders)
