# This file is used for telling Rust-related tools
# where various Rust crates are.
# This also unifies `target` output folder and
# various Rust configurations.

[workspace]
resolver = "3"
members = ["native/*", "rust/*"]

[patch.crates-io]
async-ssh2-tokio = { path = "third_party/async-ssh2-tokio" }
