[package]
name = "codex_remote_rinf"
version = "0.1.0"
edition = "2024"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
wildcard_imports = "deny"

[dependencies]
codex_remote_api = { path = "../../native/codex_remote_api" }
rinf = "8.8.1"
tokio = { version = "1.45.0", features = ["rt", "sync", "time"] }
